# mireg

./: CMakeLists.txt  README.md  key.txt  mireg.files  mireg.includes
include/: CMakeLists.txt  characteristic_map.h  characteristic_map.hpp  mireg.h  mireg.hpp  mutual_information.h  mutual_information.hpp  pcl_helper.h  pcl_helper.hpp  pcl_visualizer.h  pcl_visualizer.hpp  project_classes.hpp  registration.h  registration.hpp  transformation.h  transformation.hpp
res/scans/: CMakeLists.txt
res/wastage_analysis/: all.txt  grayscale.txt  normal.txt  reflectivity.txt  variance.txt
results/log0001/: log0001.txt  scan_pairs.txt
results/log0002_exp1/: log0002.txt  scan_pairs.txt
results/log0003_exp2a/: all_0016_0015_result.txt  all_0017_0015_result.txt  all_0018_0015_result.txt  all_0019_0015_result.txt  all_0020_0015_result.txt  all_0021_0015_result.txt  all_0022_0015_result.txt  all_0023_0015_result.txt  all_0024_0015_result.txt  all_0025_0015_result.txt  all_0026_0015_result.txt  all_0027_0015_result.txt  all_0028_0015_result.txt  all_0029_0015_result.txt  all_0030_0015_result.txt  all_0042_0041_result.txt  all_0043_0041_result.txt  all_0044_0041_result.txt  all_0045_0041_result.txt  all_0046_0041_result.txt  all_0047_0041_result.txt  all_0048_0041_result.txt  all_0049_0041_result.txt  all_0050_0041_result.txt  all_0051_0041_result.txt  all_0052_0041_result.txt  all_0053_0041_result.txt  all_0054_0041_result.txt  all_0055_0041_result.txt  all_0056_0041_result.txt  all_0074_0073_result.txt  all_0075_0073_result.txt  all_0076_0073_result.txt  all_0077_0073_result.txt  all_0078_0073_result.txt  all_0079_0073_result.txt  all_0080_0073_result.txt  all_0081_0073_result.txt  all_0082_0073_result.txt  all_0083_0073_result.txt  (+1459 more)
results/log0004_exp2b/: all_0028_0021_0_0_0_0_0_0_result.txt  all_0028_0021_0_0_0_0_0_10_result.txt  all_0028_0021_0_0_0_0_0_15_result.txt  all_0028_0021_0_0_0_0_0_20_result.txt  all_0028_0021_0_0_0_0_0_5_result.txt  all_0028_0021_0_0_0_0_10_0_result.txt  all_0028_0021_0_0_0_0_15_0_result.txt  all_0028_0021_0_0_0_0_20_0_result.txt  all_0028_0021_0_0_0_0_5_0_result.txt  all_0028_0021_0_0_0_10_0_0_result.txt  all_0028_0021_0_0_0_15_0_0_result.txt  all_0028_0021_0_0_0_20_0_0_result.txt  all_0028_0021_0_0_0_5_0_0_result.txt  all_0053_0045_0_0_0_0_0_0_result.txt  all_0053_0045_0_0_0_0_0_10_result.txt  all_0053_0045_0_0_0_0_0_15_result.txt  all_0053_0045_0_0_0_0_0_20_result.txt  all_0053_0045_0_0_0_0_0_5_result.txt  all_0053_0045_0_0_0_0_10_0_result.txt  all_0053_0045_0_0_0_0_15_0_result.txt  all_0053_0045_0_0_0_0_20_0_result.txt  all_0053_0045_0_0_0_0_5_0_result.txt  all_0053_0045_0_0_0_10_0_0_result.txt  all_0053_0045_0_0_0_15_0_0_result.txt  all_0053_0045_0_0_0_20_0_0_result.txt  all_0053_0045_0_0_0_5_0_0_result.txt  all_0099_0094_0_0_0_0_0_0_result.txt  all_0099_0094_0_0_0_0_0_10_result.txt  all_0099_0094_0_0_0_0_0_15_result.txt  all_0099_0094_0_0_0_0_0_20_result.txt  all_0099_0094_0_0_0_0_0_5_result.txt  all_0099_0094_0_0_0_0_10_0_result.txt  all_0099_0094_0_0_0_0_15_0_result.txt  all_0099_0094_0_0_0_0_20_0_result.txt  all_0099_0094_0_0_0_0_5_0_result.txt  all_0099_0094_0_0_0_10_0_0_result.txt  all_0099_0094_0_0_0_15_0_0_result.txt  all_0099_0094_0_0_0_20_0_0_result.txt  all_0099_0094_0_0_0_5_0_0_result.txt  (+1263 more)
src/: .swp  CMakeLists.txt  display.cpp  generate_transformation.cu  gicp2.cu  gicp3.cu  mireg.cpp  mireg.cu  random_input.cpp  test_generator.cpp  test_generator_exp2.cpp  transformer.cpp  transformer.cu
src/helper/: CMakeLists.txt  characteristic_map.cpp  mutual_information.cpp  pcl_helper.cpp  project_classes.cpp  registration.cpp  transformation.cpp
src/scripts/: CMakeLists.txt  exp1.sh  exp2.sh  exp2b.sh  exp3.sh  tester.sh  tester_exp2.sh  tester_exp2b.sh  tester_exp3.sh
src/visualizer/: CMakeLists.txt  pcl_visualizer.cpp
(+962 files in other folders)
