add_compile_options(-std=c++11)
find_package(CUDA REQUIRED)
list(APPEND CUDA_NVCC_FLAGS "-arch=sm_30;-std=c++11")
find_package(OpenCV REQUIRED)

cuda_add_executable(mireg mireg.cu)
cuda_add_executable(gicp gicp.cu)
cuda_add_executable(gicp2 gicp2.cu)
cuda_add_executable(gicp3 gicp3.cu)
cuda_add_executable(display display.cu)
cuda_add_executable(transformer transformer.cu)
cuda_add_executable(generate_transformation generate_transformation.cu)
add_executable(test_generator test_generator.cpp)
add_executable(test_generator_exp2 test_generator_exp2.cpp)
add_executable(random_input random_input.cpp)

add_subdirectory(visualizer)
add_subdirectory(helper)
add_subdirectory(scripts)

target_link_libraries(mireg pcl_visualizer pcl_helper transformation registration ${OpenCV_LIBS})
target_link_libraries(gicp pcl_visualizer pcl_helper transformation registration ${OpenCV_LIBS})
target_link_libraries(gicp2 pcl_visualizer pcl_helper transformation registration ${OpenCV_LIBS})
target_link_libraries(gicp3 pcl_visualizer pcl_helper transformation registration ${OpenCV_LIBS})
target_link_libraries(display pcl_visualizer ${OpenCV_LIBS})
